TODO
* add tests

20130407
* updated dependencies

20130406
* code clean up
* updated dependencies
* updated msvscpp files

20130404
* textual changes
* updated include header
* updated libfcache.3 man page

20130401
* 2013 update
* updated dependencies

20121211
* created stand-alone version based on libfguid
